--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PenyewaController.cs" />
     <Compile Include="DAL\PenyewaDAL.cs" />
+    <Compile Include="Helpers\Message.cs" />
     <Compile Include="Models\Data_carausel.cs" />
     <Compile Include="Models\Data_UI.cs" />
     <Compile Include="Global.asax.cs">
