--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Penyewa\Index.cshtml" />
     <Content Include="Views\Penyewa\Create.cshtml" />
     <Content Include="Views\Penyewa\Login.cshtml" />
+    <Content Include="Views\Penyewa\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
