--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -296,6 +296,7 @@
     <Content Include="Views\Penyewa\Edit.cshtml" />
     <Content Include="Views\Penyewa\CreateUI.cshtml" />
     <Content Include="Views\Penyewa\CreateCarausel.cshtml" />
+    <Content Include="Views\Penyewa\CreateProduk.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
