--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -230,6 +230,8 @@
     <Compile Include="Models\sysdiagram.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-nav-wizard.css" />
+    <Content Include="Content\bootstrap-nav-wizard.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\farbtastic.css" />
@@ -249,6 +251,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\bootstrap-nav-wizard.less" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -317,6 +320,7 @@
     <Content Include="Views\Penyewa\KonfirmasiDaftar.cshtml" />
     <Content Include="Views\Shared\_LayoutNoBar.cshtml" />
     <Content Include="Views\Home\Index2.cshtml" />
+    <Content Include="Views\Penyewa\IndexCarausel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
