--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Shared\_LayoutNoBar.cshtml" />
     <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Views\Penyewa\IndexCarausel.cshtml" />
+    <Content Include="Views\Penyewa\IndexProdukBig.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
