--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Models\PendaftaranTenant.cs" />
     <Compile Include="Models\Penyewa.cs" />
     <Compile Include="Models\Produk.cs" />
+    <Compile Include="Models\ProdukLengkapViewModel.cs" />
     <Compile Include="Models\ProdukViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -338,6 +339,7 @@
     <Content Include="Views\Penyewa\CreateProduk2.cshtml" />
     <Content Include="Views\Penyewa\Selesai.cshtml" />
     <Content Include="Views\Penyewa\IndexKaryawanBig.cshtml" />
+    <Content Include="Views\Penyewa\IndexProdukLengkap.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
