--- a/Pendaftaran_Tenant/Web.config
+++ b/Pendaftaran_Tenant/Web.config
@@ -24,6 +24,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
+  <sessionState timeout="120" />
   </system.web>
   <system.webServer>
     <modules>
