--- a/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
+++ b/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
@@ -195,13 +195,17 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProdukController.cs" />
+    <Compile Include="DAL\PenyewaDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DataCarausel.cs" />
+    <Compile Include="Models\DataUI.cs" />
     <Compile Include="Models\ECommerce.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Penyewa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routing\SubDomainRoute.cs" />
     <Compile Include="Startup.cs" />
