--- a/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
+++ b/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Models\Karyawan.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Penyewa.cs" />
+    <Compile Include="Models\Produk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routing\SubDomainRoute.cs" />
     <Compile Include="Startup.cs" />
@@ -279,10 +280,10 @@
     <Content Include="Views\Shared\_LayoutNoBar.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Home\Konfirmasi.cshtml" />
+    <Content Include="Views\Produk\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Produk\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -315,7 +316,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>58131</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://coba.multitenant.local:58131/</IISUrl>
+          <IISUrl>http://localhost:58131/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
