--- a/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
+++ b/E-Commerce_MultiTenant/E-Commerce_MultiTenant.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Home\Konfirmasi.cshtml" />
     <Content Include="Views\Produk\Index.cshtml" />
+    <Content Include="Views\Produk\CreatePesananPakaian.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
