email sudah bisaaaaaaaaaaa

--- a/E-Commerce_MultiTenant/Web.config
+++ b/E-Commerce_MultiTenant/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SenderEmail" value="multitenantsablon@gmail.com" />
+    <add key="SenderPassword" value="tenant123" />
   </appSettings>
   <system.web>
     <sessionState timeout="120" />
