--- a/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
+++ b/Pendaftaran_Tenant/Pendaftaran_Tenant.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Models\Produk.cs" />
     <Compile Include="Models\ProdukLengkapViewModel.cs" />
     <Compile Include="Models\ProdukViewModel.cs" />
+    <Compile Include="Models\Tambahan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
